fixing scaling on mobile devices

--- a/assets/css/mymc.css
+++ b/assets/css/mymc.css
@@ -82,7 +82,7 @@
  .homepage-opening {
    margin-top: -20px;
    background-image: url(../img/cathidral.png);
-   background-position: center center; 
+   background-position: center; 
    text-shadow: 2px 2px rgba(0,0,0,.4);
    background-repeat:none;
    color: #00ffff;
